Finished CallDataGenerator